--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -2,24 +2,22 @@
 
 .profilePage {
     display: flex;
-    height: 100%;
+    height: 100vh; // Ensure it fits within the viewport height
 
     @include md {
         flex-direction: column;
-        overflow: scroll;
-
+        overflow: hidden; // Prevent scrolling on smaller screens
     }
 }
 
 .details {
     flex: 3;
-    overflow-y: scroll;
+    overflow-y: auto; // Allow vertical scrolling only if needed
     padding-bottom: 50px;
 
     @include md {
         flex: none;
-        height: max-content;
-
+        height: auto; // Fit content height on smaller screens
     }
 
     .wrapper {
@@ -80,7 +78,7 @@
 
     @include md {
         flex: none;
-        height: max-content;
+        height: auto; // Fit content height on smaller screens
     }
 
     .wrapper {
